--- a/src/components/food/food.styl
+++ b/src/components/food/food.styl
@@ -68,7 +68,6 @@
        position: absolute
        right: 12px
     .buy
-      background: #00a0dc
       border-radius: 12px
       bottom: 18px
       box-sizing: border-box
@@ -80,6 +79,11 @@
       position: absolute
       right: 18px
       z-index: 10
+      background: rgb(0, 160, 220)
+      &.fade-enter-active,&.fade-leave-active
+        transition: all 0.2s
+      &.fade-enter, &.fade-leave-active
+        opacity: 0
   .split
     background: #f3f5f7
     border-bottom: 1px solid rgba(7, 17, 27, 0.1)
