--- a/src/components/food/food.styl
+++ b/src/components/food/food.styl
@@ -90,5 +90,15 @@
     border-top: 1px solid rgba(7, 17, 27, 0.1)
     height: 16px
     width: 100%
-   .info
-     padding: 18px
+  .info
+    padding: 18px
+    .title
+      line-height: 14px
+      margin-bottom: 6px
+      font-size: 14px
+      color: rgb(7, 17, 27)
+    .text
+      line-height: 24px
+      padding: 0 8px
+      font-size: 12px
+      color: rgb(77, 85, 93)
