--- a/src/components/food/food.styl
+++ b/src/components/food/food.styl
@@ -102,3 +102,10 @@
       padding: 0 8px
       font-size: 12px
       color: rgb(77, 85, 93)
+  .rating
+    padding-top: 18px
+    .title
+      line-height: 14px
+      margin-left: 18px
+      font-size: 14px
+      color: #07111b
