--- a/src/components/ratingselect/ratingselect.styl
+++ b/src/components/ratingselect/ratingselect.styl
@@ -6,6 +6,7 @@
     margin: 0 18px
     position: relative
     font-size: 0
+    border-1px(rgba(7, 17, 27, 0.1))
     .block
       display: inline-block
       padding: 8px 12px
