--- a/src/components/seller/seller.styl
+++ b/src/components/seller/seller.styl
@@ -81,3 +81,67 @@
         color: #f01414
         font-size: 12px
         line-height: 24px
+    .supports
+      .support-item
+        padding: 16px 12px
+        border-1px(rgba(7, 17, 27, 0.1))
+        font-size: 0
+        &:last-child
+          border-none()
+      .icon
+        display: inline-block
+        width: 16px
+        height: 16px
+        vertical-align: top
+        margin-right: 6px
+        background-size: 16px 16px
+        background-repeat: no-repeat
+        &.decrease
+          bg-image('decrease_4')
+        &.discount
+          bg-image('discount_4')
+        &.guarantee
+          bg-image('guarantee_4')
+        &.invoice
+          bg-image('invoice_4')
+        &.special
+          bg-image('special_4')
+      .text
+        line-height: 16px
+        font-size: 12px
+        color: rgb(7, 17, 27)
+  .pics
+    padding: 18px
+    .title
+      margin-bottom: 12px
+      line-height: 14px
+      color: rgb(7, 17, 27)
+      font-size: 14px
+    .pic-wrapper
+      width: 100%
+      overflow: hidden
+      white-space: nowrap
+      .pic-list
+        font-size: 0
+        .pic-item
+          display: inline-block
+          margin-right: 6px
+          width: 120px
+          height: 90px
+          &:last-child
+            margin: 0
+  .info
+    padding: 18px 18px 0 18px
+    color: rgb(7, 17, 27)
+    .title
+      padding-bottom: 12px
+      line-height: 14px
+      border-1px(rgba(7, 17, 27, 0.1))
+      font-size: 14px
+    .info-item
+      padding: 16px 12px
+      line-height: 16px
+      border-1px(rgba(7, 17, 27, 0.1))
+      font-size: 12px
+      &:last-child
+        border-none()
